--- a/pyazo/Podfile
+++ b/pyazo/Podfile
@@ -3,6 +3,8 @@ platform :osx, '10.10'
 target 'pyazo' do
 use_frameworks!
   pod 'Alamofire', '~> 4.5'
+  pod 'Magnet'
+  pod 'Sentry', :git => 'https://github.com/getsentry/sentry-cocoa.git', :tag => '3.13.1'
   target 'pyazoTests' do
     inherit! :search_paths
     # Pods for testing
