--- a/pyazo/pyazo/Info.plist
+++ b/pyazo/pyazo/Info.plist
@@ -31,6 +31,8 @@
 	<string>Copyright © 2018 Jens Langhammer. All rights reserved.</string>
 	<key>NSMainStoryboardFile</key>
 	<string>Main</string>
+	<key>LSUIElement</key>
+	<true/>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 </dict>
